# database-management

./: .gitignore  404.html  CLAUDE.md  CONCEPT_ENRICHMENT_PLAN.md  DATA_ANALYST_IMPROVEMENTS.md  ENRICH_EXISTING_200_CONCEPTS.md  FOCUSED_CONCEPT_ENRICHMENT.md  PHASE1_IMPLEMENTATION_SUMMARY.md  QUICK_IMPROVEMENTS_SUMMARY.md  README.md  index.html  mkdocs.yml  setup.py  sitemap.xml  sync-framework.sh  sync-skills.sh
.claude-skills/: .gitignore  CLAUDE.md  README-backup.md  README.md  mkdocs.yml  test-specification-timeline.txt
.claude-skills/.claude/: mcp.json  settings.json
.claude-skills/commands/: skills-old.md  skills.md
.claude-skills/docs/: about.md  claude-usage-limits.md  course-description.md  faq.md  getting-started.md  glossary.md  index.md  references.md
.claude-skills/logs/: autogenerate-microsims.md  create-chartjs-generator-skill.md  create-linkedin-announcement-skill.md  create-map-skill.md  create-microsim-matcher-skill.md  create-readme-generator-skill.md  create-skill-context-window-microsim.md  generate-diagrams.md  (+2 more)
.claude-skills/mcp-servers/skills-lister/: .gitignore  ARCHITECTURE.md  QUICKREF.md  README.md  SUMMARY.md  TESTING.md  check-mcp-status.sh  claude_desktop_config.example.json  pyproject.toml  server.py  setup.sh
about/: index.html
docs/: about.md  course-description.md  glossary.md  index.md  license.md  references.md
glossary/: index.html
learning-graph/: csv-to-json.py  index.html  learning-graph.json
license/: index.html
plugins/: __init__.py  social_override.py
references/: index.html
search/: search_index.json
(+494 files in other folders)
