[project]
name = "skills-lister-mcp"
version = "1.0.0"
description = "MCP server for listing Claude skills efficiently"
authors = [{ name = "Dan McCreary" }]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
skills-lister = "server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
